--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ dependencies = ["gradio (>=5.49.1,<6.0.0)"]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry]
+package-mode = true
+packages = [{ include = "src" }]
