--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "gradio (>=5.49.1,<6.0.0)",
     "mcp (>=1.21.1,<2.0.0)",
     "pytest (>=9.0.1,<10.0.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
+    "anyio (>=4.11.0,<5.0.0)",
 ]
 
 
@@ -24,3 +26,6 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 package-mode = true
 packages = [{ include = "src/upgrade_advisor" }]
+
+[tool.ruff]
+line-length = 88
