--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "transformers (>=4.57.1,<5.0.0)",
     "typer[all] (>=0.20.0,<0.21.0)",
     "gradio (>=5.49.1,<6.0.0)",
+    "ddgs (>=9.9.1,<10.0.0)",
 ]
 
 
