--- a/.env_reference
+++ b/.env_reference
@@ -1,5 +1,5 @@
 # rename this file to .env and fill in the values below
 GITHUB_PAT = "your_github_personal_access_token_here"
 # see https://github.com/github/github-mcp-server?tab=readme-ov-file#default-toolset
-GITHUB_TOOLSETS = "default"
+GITHUB_TOOLSETS="default,discussions,experiments"
 HF_TOKEN ="hf_"
