--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "anyio (>=4.11.0,<5.0.0)",
     "transformers (>=4.57.1,<5.0.0)",
     "typer[all] (>=0.20.0,<0.21.0)",
-    "gradio (>=5.49.1,<6.0.0)",
+    "gradio[oauth] (>=6.0.1,<7.0.0)",
     "ddgs (>=9.9.1,<10.0.0)",
     "uv (>=0.9.11,<0.10.0)",
     "markdownify (>=1.2.2,<2.0.0)",
