--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "ddgs (>=9.9.1,<10.0.0)",
     "uv (>=0.9.11,<0.10.0)",
     "markdownify (>=1.2.2,<2.0.0)",
+    "tomli (>=2.4.0,<3.0.0)",
 ]
 
 
